# saksham-voter-companion

./: .env.example  .gitignore  LICENSE  README.md  cloudbuild.yaml
.github/workflows/: ci.yml
apps/backend/: Dockerfile  main.py  pyproject.toml
apps/backend/agents/: journey.py  knowledge.py  locator.py  orchestrator.py  verifier.py
apps/backend/api/: booth.py  chat.py  constituency.py  i18n.py  timeline.py  tts.py
apps/backend/core/: config.py  exceptions.py  logging.py  rate_limit.py  security_headers.py
apps/backend/data/: timeline_phases.json
apps/backend/services/: bigquery.py  firestore.py  maps.py  translation.py  tts.py  vertex_search.py
apps/backend/tests/: conftest.py  test_agents.py  test_api.py  test_middleware.py  test_orchestrator.py  test_timeline.py  test_vertex_search.py
apps/web/: Dockerfile  package-lock.json  package.json  playwright.config.ts
apps/web/app/: dashboard-client.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/booth/: booth-client.tsx  page.tsx
apps/web/app/chat/: actions.ts  chat-client.tsx  page.tsx
apps/web/app/constituency/: constituency-client.tsx  page.tsx
apps/web/app/practice/: page.tsx  practice-client.tsx
apps/web/app/quiz/: page.tsx  quiz-client.tsx
apps/web/app/timeline/: page.tsx  timeline-client.tsx  timeline-data-client.tsx
apps/web/app/verify/: page.tsx  verify-client.tsx
apps/web/components/: AppShell.tsx  ChatMessage.tsx  CitationCard.tsx  CredibilityStrip.tsx  Dashboard.tsx  HeroState.tsx  LanguageContext.tsx  LanguageToggle.tsx  OnboardingModal.tsx  VoicePlayButton.tsx
apps/web/components/practice/: EvmMachine.tsx  EvmStep.tsx  InstructionCard.tsx  Stepper.tsx  SuccessCard.tsx  VvpatSlip.tsx
apps/web/data/: quiz-questions.json
apps/web/e2e/: tests.spec.ts
apps/web/lib/: api.ts  auth.ts  design-system.ts  useI18n.ts
data/: constituencies.json
data/eci-docs/: SOURCES.md
data/elections/: SOURCES.md
docs/: architecture.md  architecture.mmd  deployment.md
eval/: README.md  ground_truth.yaml  run_eval.py
scripts/: deploy.sh  ingest-eci-docs.sh  seed-firestore.py
